--- a/FellesCSS.css
+++ b/FellesCSS.css
@@ -23,7 +23,7 @@ a{
     padding:0;
     list-style:none;
     overflow: hidden;
-    background-color: #8FBE00;
+    background-color: #white;
 }
 
 .hovedheader ul a{
