--- a/FellesCSS.css
+++ b/FellesCSS.css
@@ -1,217 +1,216 @@
 body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #F9F2E7;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #F9F2E7;
 }
 
 a{
-    color: black;
+  color: black;
 }
 
 /*Header og hamburgermeny*/
 .hovedheader{
-    background-color: #8FBE00;
-    box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
-    position: fixed;
-    width: 100%;
-    z-index: 3;
-    top: 0;
+  background-color: #8FBE00;
+  box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
+  position: fixed;
+  width: 100%;
+  z-index: 3;
+  top: 0;
 }
 
 .hovedheader ul{
-    margin:0;
-    padding:0;
-    list-style:none;
-    overflow: hidden;
-    background-color: #white;
+  margin:0;
+  padding:0;
+  list-style:none;
+  overflow: hidden;
+  background-color: #8FBE00;
 }
 
 .hovedheader ul a{
-    display: block;
-    padding: 15px;
-    text-decoration: none;
+  display: block;
+  padding: 15px;
+  text-decoration: none;
 }
 
 .hovedheader ul a:hover{
-    background-color: #AEE239;
+  background-color: #AEE239;
 }
 
 .hovedheader .logoen{
-    float: left;
-    display: block;
-    font-size: 2em;
-    padding: 10px 20px;
-    text-decoration: none;
+  float: left;
+  display: block;
+  font-size: 2em;
+  padding: 10px 20px;
+  text-decoration: none;
 }
 
 .hovedheader .menu{
-    clear: both;
-    max-height: 0;
-    transition: max-height .2s ease-out;
+  clear: both;
+  max-height: 0;
+  transition: max-height .2s ease-out;
 }
 
 .hovedheader .menu-icon{
-    padding: 28px 20px;
-    position: relative;
-    float: right;
-    cursor: pointer;
+  padding: 28px 20px;
+  position: relative;
+  float: right;
+  cursor: pointer;
 }
 
 .hovedheader .menu-icon .nav-icon{
-    background: darkslategrey;
-    display: block;
-    height: 3px;
-    width: 20px;
-    position: relative;
-    transition: background .2s ease-out;
+  background: darkslategrey;
+  display: block;
+  height: 3px;
+  width: 20px;
+  position: relative;
+  transition: background .2s ease-out;
 }
 
 .hovedheader .menu-icon .nav-icon:before{
-    background: darkslategrey;
-    content:"";
-    display: block;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    transition: all .2s ease-out;
-    top: 5px; 
+  background: darkslategrey;
+  content:"";
+  display: block;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  transition: all .2s ease-out;
+  top: 5px; 
 }
 
 .hovedheader .menu-icon .nav-icon:after{
-    background: darkslategrey;
-    content:"";
-    display: block;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    transition: all .2s ease-out;
-    top: -5px; 
+  background: darkslategrey;
+  content:"";
+  display: block;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  transition: all .2s ease-out;
+  top: -5px; 
 }
 
 .hovedheader .menu-btn{
-    display:none;
+  display:none;
 }
 
 .hovedheader .menu-btn:checked ~ .menu{
-    max-height: 250px;
+  max-height: 250px;
 }
 
 .hovedheader .menu-btn:checked ~ .menu-icon .nav-icon{
-    background-color: transparent;
+  background-color: transparent;
 }
 
 .hovedheader .menu-btn:checked ~ .menu-icon .nav-icon:before{
-    transform: rotate(-45deg);
-    top:0;    
+  transform: rotate(-45deg);
+  top:0;    
 }
 
 .hovedheader .menu-btn:checked ~ .menu-icon .nav-icon:after{
-    transform: rotate(45deg);
-    top:0;
+  transform: rotate(45deg);
+  top:0;
 }
 
 
-/* piotr sinn css *
+/* piotr sinn css*/
 @media all {
-  .hovedfooter {
-      position:static;
-      bottom:5px;
-      padding:5px; 
-      /*Gammel farge: #329c4f*/
-      background-color: #8FBE00;
-      box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
-      margin-top:20px;
-      margin-bottom:10px;
-      text-align: center;
-  }
-  .hovedfooter .lenker_footer{
-      margin-top: 10px;
-      margin-bottom: 10px;
-  }
-  .hovedfooter .copyright{
-      margin-top: 10px;
-      margin-bottom: 10px; 
-  }
-  .lenker_footer a{
-      margin-right: 10px;
-  }
-  .hovedinnhold {
-      position: static;
-      margin-top: 100px;
-      margin-left: 40%;
-      margin-right: 50px;
-      margin-bottom: 100px;
-  }
-  .sideinnhold {
-      position: static;
-      float: right;
-      margin-top: 100px;
-      margin-right: 200px;
-      margin-bottom: 100px;
-  }
+.hovedfooter {
+    position:static;
+    bottom:5px;
+    padding:5px; 
+    /*Gammel farge: #329c4f*/
+    background-color: #8FBE00;
+    box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
+    margin-top:20px;
+    margin-bottom:10px;
+    text-align: center;
+}
+.hovedfooter .lenker_footer{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.hovedfooter .copyright{
+    margin-top: 10px;
+    margin-bottom: 10px; 
+}
+.lenker_footer a{
+    margin-right: 10px;
+}
+.hovedinnhold {
+    position: static;
+    margin-top: 100px;
+    margin-left: 40%;
+    margin-right: 50px;
+    margin-bottom: 100px;
+}
+.sideinnhold {
+    position: static;
+    float: right;
+    margin-top: 100px;
+    margin-right: 200px;
+    margin-bottom: 100px;
 }
 
 /*css
 
- Global */
+Global */
 .container{
-  width:80%;
-  margin:auto;
-  overflow:hidden;
-   
+width:80%;
+margin:auto;
+overflow:hidden;
+ 
 }
 
 
 
 /* Showcase */
 #showcase{
-  min-height:500px;
-  background:url('img/desert.jpg') no-repeat 0 -400px;
-  width: 100%;
-  height: auto;
-  text-align:center;
-  color:green;
-  margin-top: 62px;
+min-height:500px;
+background:url('img/desert.jpg') no-repeat 0 -400px;
+width: 100%;
+height: auto;
+text-align:center;
+color:green;
+margin-top: 62px;
 }
 
 #showcase h1{
-  margin-top:100px;
-  font-size:55px;
-  margin-bottom:10px;
+margin-top:100px;
+font-size:55px;
+margin-bottom:10px;
 }
 
 #showcase p{
-  font-size:20px;
+font-size:20px;
 }
 
 
 
 /* Sidebar */
 aside#sidebar{
-  float:right;
-  width:30%;
-  margin-top:10px;
+float:right;
+width:30%;
+margin-top:10px;
 }
 
 aside#sidebar .quote input, aside#sidebar .quote textarea{
-  width:90%;
-  padding:5px;
+width:90%;
+padding:5px;
 }
 
 /* Main-col */
 article#main-col{
-  float:left;
-  width:65%;
+float:left;
+width:65%;
 }
 
 #tekst{
-  margin-top:20px;
+margin-top:20px;
 }
 
 .bilde {
-  width: 100%;
-  height: auto;
-  padding-bottom:10px;
+width: 100%;
+height: auto;
+padding-bottom:10px;
 }
 
 
@@ -221,71 +220,71 @@ article#main-col{
 
 }
 .login-box{
-  width: 280px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  color: white;
+width: 280px;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%,-50%);
+color: white;
 }
 .login-box h1{
-  float: left;
-  font-size: 40px;
-  border-bottom: 6px solid #4caf50;
-  margin-bottom: 50px;
-  padding: 13px 0;
+float: left;
+font-size: 40px;
+border-bottom: 6px solid #4caf50;
+margin-bottom: 50px;
+padding: 13px 0;
 }
 .textbox{
-  width: 100%;
-  overflow: hidden;
-  font-size: 20px;
-  padding: 8px 0;
-  margin: 8px 0;
-  border-bottom: 1px solid #4caf50;
+width: 100%;
+overflow: hidden;
+font-size: 20px;
+padding: 8px 0;
+margin: 8px 0;
+border-bottom: 1px solid #4caf50;
 }
 .textbox i{
-  width: 26px;
-  float: left;
-  text-align: center;
+width: 26px;
+float: left;
+text-align: center;
 }
 .textbox input{
-  border: none;
-  outline: none;
-  background: none;
-  color: white;
-  font-size: 18px;
-  width: 80%;
-  float: left;
-  margin: 0 10px;
+border: none;
+outline: none;
+background: none;
+color: white;
+font-size: 18px;
+width: 80%;
+float: left;
+margin: 0 10px;
 }
 .btn{
-  width: 100%;
-  background: none;
-  border: 2px solid #4caf50;
-  color: white;
-  padding: 5px;
-  font-size: 18px;
-  cursor: pointer;
-  margin: 12px 0;
+width: 100%;
+background: none;
+border: 2px solid #4caf50;
+color: white;
+padding: 5px;
+font-size: 18px;
+cursor: pointer;
+margin: 12px 0;
 }
 
 
 @media (min-width: 760px) {
 
-    .hovedheader li{
-        float: left;
-    }
-    .hovedheader li a{
-        padding: 20px 30px;
-    }
-    .hovedheader .menu{
-        clear: none;
-        float: right;
-        max-height: none;
-    }
-    .hovedheader .menu-icon{
-        display: none;
-    }
-	
+  .hovedheader li{
+      float: left;
+  }
+  .hovedheader li a{
+      padding: 20px 30px;
+  }
+  .hovedheader .menu{
+      clear: none;
+      float: right;
+      max-height: none;
+  }
+  .hovedheader .menu-icon{
+      display: none;
+  }
+
 
 }
