--- a/FellesCSS.css
+++ b/FellesCSS.css
@@ -170,7 +170,7 @@ width: 100%;
 height: auto;
 text-align:center;
 color:green;
-margin-top: 58px;
+margin-top: 62px;
 }
 
 #showcase h1{
@@ -266,6 +266,15 @@ padding: 5px;
 font-size: 18px;
 cursor: pointer;
 margin: 12px 0;
+}
+
+/* Alvin*/
+.textbox1{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid black;
 }
 
 
