--- a/FellesCSS.css
+++ b/FellesCSS.css
@@ -271,12 +271,16 @@ margin: 12px 0;
 
 /* Alvin*/
 .textbox1{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border: 1px solid black;
-}
+width: 100%;
+overflow: hidden;
+font-size: 20px;
+padding: 8px 0;
+margin: 8px 0;
+margin-top: 5%;
+margin-left:25%;
+top: 50%;
+left: 50%;
+border-bottom: 1px solid #4caf50;
 
 
 @media (min-width: 760px) {
@@ -297,4 +301,13 @@ margin: 12px 0;
   }
 
 
+}
+
+    @media screen and (max-width: 600px) {
+	  
+   .textbox {
+	   
+	   width: 100%;
+	   margin-bottom: 50px;
+}
 }
